style.css
/* RESET */
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

/* TYPOGRAPHY */
body {
    font-family: "Open Sans", sans-serif;   
}  

main h1{
    font-size: 53px;
}

h2{
    font-size: 30px;
}

.col-30 i {
    font-size: 40px;
}

.plans h4 {
    font-size: 16px;
}

/* GENERAL */
img {
    max-width: 100%;
    height: auto;  
}

header a{
    text-decoration: none;
    color: black;
}

main a {
    color:#1800EE ;
}


.btn {
    cursor: pointer;
}



/* HEADER */
header {
    max-width: 100%;
    background-color: #FFFFFF;
    display: flex;
    justify-content: space-between;
    align-content: center;
    padding: 30px 20px;
    position: sticky;
    top: 0;
    left: 0;
    z-index: 10;
 }

 
.left-head {
    width: 50%;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    gap: 40px;
}


.right-head {
    width: 50%;
    display: flex;
    justify-content: flex-end;
    align-items: center;

    gap: 20px;
}

header ul  {
    display: flex;
    justify-content: space-between;
    gap: 40px;
}

header li {
    list-style: none;
    gap: 40px;
}



/* BUTTONS */

.btn {
    background: transparent;
    border: none;
    font-family: inherit;
    padding: 6px 14px;
}

.btn-large { 
    background: transparent;
    border: none;
    font-family: inherit;
    padding: 8px 38px;
}

.btn-primary {
    background-color:#0061FF;
    color: #FFFFFF;
}

.btn-secondary {
    background-color:#FFFFFF;
    color: black;
}


.btn-tertiary{
    background-color: white;
}

.btn-language{
    color: #999999;
    background-color: transparent;
    font-size: 15px;
    padding: 0px;
}

.plans .btn-primary{
    width: 100%;
}

.plans.plans-bottom .btn-large{
    background-color:#0061FF;
    color: #FFFFFF;
    padding: 8px 30px;
}


header .btn {
    font-size: 16px;
}
 main .btn, main .btn-large {
    font-size: 16px
 }


/*  */

/* GRID LAYOUT */
.container {
    max-width: 1200px;
    margin: 0 auto;
    padding-left: 10px;
    padding-right: 10px;
}

.row {
    display: flex;
/*     flex-wrap: wrap;
 */    
    margin-left: -10px;
    margin-right: -10px;
    border: 1px dashed black;
}

.container-small {
    max-width: 1000px;
    margin: 0 auto;
    padding-left: 10px;
    padding-right: 10px;
}

.container-fullsize{
    max-width: 100%;
    padding-left: 10px;
    padding-right: 10px;
}

.col-12{
    width: 12%;
}

.col-20 {
    width: 20%;
}

.col-33bottom {
    width: 33%;
    border: 1px solid black;  
 }
 .col-67bottom{
    width: 67%;
    border: 1px solid black;  

 }

.col-30 {
    width: 30%;
    border: 1px dashed black;

}

.col-70 {
    width: 70%;
    border: 1px dashed black;

}

.col-100 {
    width: 100%;
    border: 1px dashed black;

}



/*  */

/* MAIN */

/* hero */

.hero {
    max-width: 100%;
    background-color: #B4D0E7;
}

.hero > .container {
    padding-top: 100px;
}

.hero .row {
    padding-top: 60px;

}

.hero .col-30 {
    padding-bottom: 15px;
}

.hero .col-70 {
    margin-bottom: -70px;
}

.hero p.description{
    padding-bottom: 30px;
}

.hero p.annulla{
    padding-top: 30px;
    padding-bottom: 80px;
}


/*  */

/* first section */
.first label.invoice{
    padding-right:48px;
}

.first > .container-small {
    padding-top:160px ;
}

.first .col-33 {
    width: calc(100% - 100px / 3);
    /* display:flex;
    justify-content: flex-start; */

}

/* plans */

.first .col-33{
    border: 1px solid #D0D0D3;
    
}

.plans{
    padding: 38px 30px 10px 30px;

}

.plan-people{
    display: block;
    text-align: center;
    border-bottom: 1px solid #D0D0D3;
    padding: 8px 0 ;
}

.plan-type{
    padding-bottom: 54px;
}

.plan-type .plan-name {
    padding-bottom: 26px;
}

.plan-type .price {
    padding-bottom: 20px;
    display:block;
    font-weight: bold;
}

.plan-type .per-month{
    color: #66686B;
}

/* list */
.plans li{
    list-style: none;
}

.plans li:not(i){
    color: #66686B;
}

.plans ul {
    padding-bottom: 54px;
}

.plans .second-list{
    padding-top: 34px;
}



/* /list */

.plans .buy {
    padding-top: 34px;

}

.plans hr{
    display: block;
    width:22%;
    margin: 40px 0;
    color: #66686B;

}

.first-list .icona {
    color: black;
}

.second-list .icona{
    color: #0061FF;
}

.plans li {
    padding-bottom: 20px;
}

.plans li:last-of-type{
    padding-bottom: 0 ;
}

.icona{
    padding-right: 5px;
}



.col-33.sx{
    margin-right: 25px;
}

.col-33.cent{
    margin-left: 25px;
    margin-right: 25px;
}

.col-33.dx {
    margin-left: 25px;
}

.first h2.title{
    padding-bottom: 70px;
} 

.first .row{
    padding-top: 50px;
    padding-bottom: 50px;
}

.first .row-bottom-top {
    padding-top: 0;
    padding-bottom: 0;
    border:#D0D0D3;
}

.first .row-bottom-down{
    padding-top: 0px;
    padding-bottom: 0px;
    border:#D0D0D3;
}

.plans.plans-bottom {
    padding: 38px 30px 38px 30px ;
    
}

.plans.plans-bottom.dx {
    display: flex;
    justify-content: flex-end;

}

/* second section */
section.second{
    padding-top: 150px;
}

.pad38-30{
    padding: 38px 30px 38px 30px
}

.col-33bottom.pad38-30 .title{
    padding-bottom: 20px;
}

.col-33bottom.pad38-30 p {
    padding-bottom: 30px;
}

/* third section */
section.third{
    padding-top: 160px;
}

.third h2.title{
    padding-bottom:70px;
}

.third .col-33 {
    width: calc(100% - 100px / 3);
    border: 1px dashed black;
}

.third .col-33 .titolo{
    padding-top: 5px;
    padding-bottom: 36px;
}

.row.fila1{
    padding-bottom: 50px;
}

.row.fila2{
    padding-bottom:200px ;
}
/*  */

/* fourth section */
.fourth .row.row-fourth {
    display: block;
    padding-bottom: 142px;
}

.fourth h2.titolo{
    padding-bottom:56px ;
}

/* fifth section */

/*/ fifth section */

/* sixth section */
section.sixth h2{
    color: #61082B;
}

section.sixth {
    background-color:#B4D0E7 ;
}

.row.row-sixth{
    padding-top: 130px;
    padding-bottom: 130px;
}

.sixth .col-33bottom {
    padding-top: 8px;
}

.sixth .col-33bottom {
    text-align: end;
}

/* seventh section */
.row.row-seventh-up{
    display: block;
    padding-top:155px ;
    padding-bottom: 140px;

}

.faq-title {
    padding-bottom: 66px;
}

.faq-parag{
    border-top: 1px solid #9D9D9D;
    display: flex;
    justify-content: space-between;    
}

.seventh .faq-parag:last-of-type{
    border-bottom: 1px solid #9D9D9D
}


.faq-parag p {
    padding: 38px 0;  
    font-weight: bold;    
}

span.arrow {
    padding: 38px 46px 38px 0;
}
/*/ seventh section */

/* footer */
footer {
    background-color: #000000;
}

footer .row.row-footer{
    padding-top: 102px;
    padding-bottom: 102px;
    gap: 96px;
}

.col-20footer{
   width:calc((100% - 384px) / 4);
 }
    
.footer-title{
    padding-bottom: 30px;
}

.col-20footer > *{
    display: block;
    color: #FFFFFF;
}

.col-20footer a{
    padding-bottom:18px;
    text-decoration: none;
}

footer .col-12{
    border-top: 1px solid white;
    padding: 50px 0 ;
}


.row-language .icona  {
    color: #999999;
}
/* / footer */

